--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^8.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dayjs": "^1.11.2",
     "mysql2": "^2.3.3",
     "nestjs-typeorm-paginate": "^4.0.1",
     "reflect-metadata": "^0.1.13",
